add multiple plane notebook

--- a/src/controller/TestSimEx/SimExWithMultiplePlane.ipynb
+++ b/src/controller/TestSimEx/SimExWithMultiplePlane.ipynb
@@ -28,6 +28,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Gaussian photon source"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Photon-mater-interaction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmi_parameters={\"number_of_trajectories\" : 1,\n",
+    "                \"random_rotation\" : False}\n",
+    "photon_matter_interactor=XMDYNDemoPhotonMatterInteractor(parameters=pmi_parameters,\n",
+    "                                                         input_path=prop_path,\n",
+    "                                                         output_path='pmi',\n",
+    "                                                         sample_path='3WUL.pdb')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Detector Setting"
    ]
   },
@@ -126,6 +154,21 @@
    ],
    "source": [
     "detector_geometry.serialize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diffraction_parameters = SingFELPhotonDiffractorParameters(\n",
+    "                                               uniform_rotation=False,\n",
+    "                                               slice_interval=100,\n",
+    "                                               number_of_slices=100,\n",
+    "                                               number_of_diffraction_patterns=1,\n",
+    "                                               detector_geometry=detector_geometry\n",
+    "                                              )"
    ]
   }
  ],
