--- a/src/controller/TestSimEx/singFEL_file_writing_test.ipynb
+++ b/src/controller/TestSimEx/singFEL_file_writing_test.ipynb
@@ -18,7 +18,9 @@
    "source": [
     "import os,shutil\n",
     "from SimEx.Parameters.DetectorGeometry import DetectorGeometry, DetectorPanel\n",
-    "from SimEx.Utilities.Units import meter, electronvolt, joule, radian"
+    "from SimEx.Utilities.Units import meter, electronvolt, joule, radian\n",
+    "from pysingfel.radiationDamage import generateRotations, rotateParticle\n",
+    "from pysingfel.FileIO import saveAsDiffrOutFile, prepH5"
    ]
   },
   {
@@ -93,57 +95,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saveAsDiffrOutFile??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iMax = 8\n",
+    "jMax = 10\n",
+    "def to1D (i,j):\n",
+    "    return j + i*iMax\n",
+    "\n",
+    "def to2D (idx):\n",
+    "    j = idx%(iMax)\n",
+    "    i = idx//(iMax)\n",
+    "    return (i,j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ";panel 0\n",
-      "panel0/min_fs         = 0\n",
-      "panel0/max_fs         = 100\n",
-      "panel0/min_ss         = 0\n",
-      "panel0/max_ss         = 100\n",
-      "panel0/corner_y       = 5\n",
-      "panel0/fs             = 1.0x\n",
-      "panel0/ss             = 1.0y\n",
-      "panel0/clen           = 1.3000000e-01\n",
-      "panel0/res            = 4.5454545e+02\n",
-      "panel0/coffset        = 0.0000000e+00\n",
-      "panel0/adu_per_photon = 1.0000000e+00\n",
-      "panel0/max_adu        = 1.0000000e+04\n",
-      "panel0/px             = 101\n",
-      "panel0/py             = 101\n",
-      "panel0/pix_width      = 2.2000000e-03\n",
-      "panel0/d              = 1.3000000e-01\n",
-      "panel0/corner_x       = -50\n",
-      "\n",
-      ";panel 1\n",
-      "panel1/min_fs         = 0\n",
-      "panel1/max_fs         = 100\n",
-      "panel1/min_ss         = 0\n",
-      "panel1/max_ss         = 100\n",
-      "panel1/corner_y       = -105\n",
-      "panel1/fs             = 1.0x\n",
-      "panel1/ss             = 1.0y\n",
-      "panel1/clen           = 2.5000000e-01\n",
-      "panel1/res            = 4.5454545e+02\n",
-      "panel1/coffset        = 0.0000000e+00\n",
-      "panel1/adu_per_photon = 1.0000000e+00\n",
-      "panel1/max_adu        = 1.0000000e+04\n",
-      "panel1/px             = 101\n",
-      "panel1/py             = 101\n",
-      "panel1/pix_width      = 2.2000000e-03\n",
-      "panel1/d              = 2.5000000e-01\n",
-      "panel1/corner_x       = -50\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(2, 6)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "detector_geometry.serialize()"
+    "idx = to2D(2,6)\n",
+    "to3D(idx)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
