Add diagram of 3WUL structure

--- a/src/controller/TestSimEx/SimExWithMultiplePanel_SimpleBeam.ipynb
+++ b/src/controller/TestSimEx/SimExWithMultiplePanel_SimpleBeam.ipynb
@@ -231,6 +231,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[3WUL](https://www.rcsb.org/structure/3WUL) is a protein structure in PDB.\n",
+    "The protein is hen's egg-white lysozyme (HEWL), a small enzyme commonly used as a test case for X-ray crystallography.\n",
+    "\n",
+    "![3WUL protein structure](3wul.pdb1-250.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -249,6 +259,13 @@
    "source": [
     "diffractor._run()\n",
     "diffractor.saveH5()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulation Results"
    ]
   },
   {
