Generate 2D version of AGIPD geometry

--- a/src/controller/TestSimEx/Make AGIPD geometry.ipynb
+++ b/src/controller/TestSimEx/Make AGIPD geometry.ipynb
@@ -32,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b9d9b158748>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2ab6ad492c50>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -72,11 +72,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "geom.write_crystfel_geom('agipd_simple.geom')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some tools expect all the data in a 2D array, rather than stacking modules on an extra dimension.\n",
+    "We can do this by spreading the modules out in a long strip (8192 x 128), with this geometry file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geom.write_crystfel_geom('agipd_simple_2d.geom', dims=('frame', 'ss', 'fs'))"
    ]
   }
  ],
