add more notebooks

--- a/src/controller/panoscDEMO/PaNOSC_DEMO.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = './diffr_200'"
+    "data_path = './diffr_2'"
    ]
   },
   {
@@ -202,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b8eedc83898>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2b8dcca317f0>"
       ]
      },
      "execution_count": 8,
@@ -228,11 +228,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "geom.write_crystfel_geom('agipd_simple_2d.geom', dims=('frame', 'ss', 'fs'))"
+    "geom.write_crystfel_geom('agipd_simple_2d.geom', dims=('frame', 'ss', 'fs'),  adu_per_ev=1.0, clen=0.13, photon_energy=4972)"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "diffParam = CrystFELPhotonDiffractorParameters(\n",
     "        sample='3WUL.pdb',                    # Looks up pdb file in cwd, if not found, queries from RCSB pdb mirror.\n",
     "        uniform_rotation=True,                # Apply random rotation\n",
-    "        number_of_diffraction_patterns=200,     #\n",
+    "        number_of_diffraction_patterns=2,     #\n",
     "        powder=False,                         # Set to True to create a virtual powder diffraction pattern (unested)\n",
     "        intensities_file=None,                # File that contains reflection intensities. If set to none, use uniform intensity distribution\n",
     "        crystal_size_range=[1e-7,1e-7],       # Range ([min,max]) in units of metres of crystal size.\n",
@@ -284,7 +284,7 @@
      "text": [
       "Renaming diffr_out-1.h5 to diffr_out_0000001.h5.\n",
       "Renaming diffr_out-2.h5 to diffr_out_0000002.h5.\n",
-      "Linking all patterns into /gpfs/exfel/data/user/juncheng/crystalProject/src/controller/panoscDEMO/diffr.h5.\n"
+      "Linking all patterns into /gpfs/exfel/data/user/juncheng/crystalProject/src/controller/panoscDEMO/diffr_2.h5.\n"
      ]
     }
    ],
