--- a/src/controller/panoscDEMO/PaNOSC_DEMO-2_Monolithic-Noise.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-2_Monolithic-Noise.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[3WUL](https://www.rcsb.org/structure/3WUL) is a protein structure in PDB.\n",
+    "[3WUL](https://www.rcsb.org/structure/3WUL) is a protein structure in PDB (Sugahara et al, 2016, [10.1038/nmeth.3172](https://dx.doi.org/10.1038/nmeth.3172)).\n",
     "The protein is hen's egg-white lysozyme (HEWL), a small enzyme commonly used as a test case for X-ray crystallography."
    ]
   },
