--- a/src/controller/panoscDEMO/PaNOSC_DEMO-3_Multiple_Panel.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-3_Multiple_Panel.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[3WUL](https://www.rcsb.org/structure/3WUL) is a protein structure in PDB.\n",
+    "[3WUL](https://www.rcsb.org/structure/3WUL) is a protein structure in PDB (Sugahara et al, 2016, [10.1038/nmeth.3172](https://dx.doi.org/10.1038/nmeth.3172)).\n",
     "The protein is hen's egg-white lysozyme (HEWL), a small enzyme commonly used as a test case for X-ray crystallography."
    ]
   },
@@ -56,7 +56,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"AGIPD.png\" width=\"300\" align=\"left\"/> <img src=\"agipd_geometry_14_1.png\" width=\"420\" align=\"right\"/> "
+    "<img src=\"AGIPD.png\" width=\"300\" align=\"left\"/> <img src=\"agipd_geometry_14_1.png\" width=\"420\" align=\"right\"/> \n",
+    "\n",
+    "<div style=\"clear: both\"><small>Photo © European XFEL</small></div>"
    ]
   },
   {
