Polish some formatting a bit

--- a/src/controller/panoscDEMO/PaNOSC_DEMO-1_Monolithic.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-1_Monolithic.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clean up previous diffraction run"
+    "Clean up any data from a previous run:"
    ]
   },
   {
@@ -101,15 +101,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dirs_to_remove=[data_path]\n",
-    "files_to_remove=[data_path+'.h5']\n",
+    "if os.path.isdir(data_path):\n",
+    "    shutil.rmtree(d)\n",
     "\n",
-    "for d in dirs_to_remove:\n",
-    "    if os.path.isdir(d):\n",
-    "        shutil.rmtree(d)\n",
-    "for f in files_to_remove:\n",
-    "    if os.path.isfile(f):\n",
-    "        os.remove(f)"
+    "if os.path.isfile(data_path + '.h5'):\n",
+    "    os.remove(f)"
    ]
   },
   {
@@ -132,7 +128,7 @@
     "    photon_energy_relative_bandwidth=0.003, # relative bandwidth dE/E\n",
     "    divergence=0.0 * radian,                # Beam divergence in rad\n",
     "    photon_energy_spectrum_type='tophat',   # Spectrum type. Acceptable values are \"tophat\", \"SASE\", and \"twocolor\")\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -143,19 +139,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a detector with 1000 × 1000 pixels, each a 220 μm square."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "panel = DetectorPanel(ranges={\"fast_scan_min\" : 0, \"fast_scan_max\" : 999,\n",
-    "                              \"slow_scan_min\" : 0, \"slow_scan_max\" : 999},\n",
-    "                      pixel_size=220.0e-6*meter,\n",
-    "                      energy_response=1.0/electronvolt,\n",
-    "                      distance_from_interaction_plane=0.13*meter,\n",
-    "                      corners={\"x\" : -500, \"y\": -500},\n",
-    "                      saturation_adu=1.e6,\n",
-    "                      )\n",
+    "panel = DetectorPanel(\n",
+    "    ranges={\"fast_scan_min\" : 0, \"fast_scan_max\" : 999,\n",
+    "            \"slow_scan_min\" : 0, \"slow_scan_max\" : 999},\n",
+    "    pixel_size=220.0e-6 * meter,\n",
+    "    energy_response=1.0 / electronvolt,\n",
+    "    distance_from_interaction_plane=0.13 * meter,\n",
+    "    corners={\"x\" : -500, \"y\": -500},\n",
+    "    saturation_adu=1.e6,\n",
+    ")\n",
     "\n",
     "detector_geometry = DetectorGeometry(panels=panel)"
    ]
@@ -168,24 +172,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we define the details of our sample, combined with the beam & detector definitions from above."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "diffParam = CrystFELPhotonDiffractorParameters(\n",
-    "        sample='3WUL.pdb',                    # Looks up pdb file in cwd, if not found, queries from RCSB pdb mirror.\n",
-    "        uniform_rotation=True,                # Apply random rotation\n",
-    "        number_of_diffraction_patterns=2,     #\n",
-    "        powder=False,                         # Set to True to create a virtual powder diffraction pattern (unested)\n",
-    "        intensities_file=None,                # File that contains reflection intensities. If set to none, use uniform intensity distribution\n",
-    "        crystal_size_range=[1e-7,1e-7],       # Range ([min,max]) in units of metres of crystal size.\n",
-    "        poissonize=False,                     # Set to True to add Poisson noise.\n",
-    "        number_of_background_photons=0,       # Change number to add uniformly distributed background photons.\n",
-    "        suppress_fringes=False,               # Set to True to suppress side maxima between reflection peaks.\n",
-    "        beam_parameters=beamParam,                 # Beam parameters object from above\n",
-    "        detector_geometry=detector_geometry,      # External file that contains the detector geometry in CrystFEL notation.\n",
-    "        )"
+    "    sample='3WUL.pdb',                    # Looks up pdb file in cwd, if not found, queries from RCSB pdb mirror.\n",
+    "    uniform_rotation=True,                # Apply random rotation\n",
+    "    number_of_diffraction_patterns=2,     #\n",
+    "    powder=False,                         # Set to True to create a virtual powder diffraction pattern (unested)\n",
+    "    intensities_file=None,                # File that contains reflection intensities. If set to none, use uniform intensity distribution\n",
+    "    crystal_size_range=[1e-7, 1e-7],      # Range ([min,max]) in units of metres of crystal size.\n",
+    "    poissonize=False,                     # Set to True to add Poisson noise.\n",
+    "    number_of_background_photons=0,       # Change number to add uniformly distributed background photons.\n",
+    "    suppress_fringes=False,               # Set to True to suppress side maxima between reflection peaks.\n",
+    "    beam_parameters=beamParam,            # Beam parameters object from above\n",
+    "    detector_geometry=detector_geometry,  # External file that contains the detector geometry in CrystFEL notation.\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run the simulation"
    ]
   },
   {
@@ -194,8 +212,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diffractor = CrystFELPhotonDiffractor(parameters=diffParam,\n",
-    "                                     output_path=data_path)"
+    "diffractor = CrystFELPhotonDiffractor(\n",
+    "    parameters=diffParam, output_path=data_path\n",
+    ")"
    ]
   },
   {
@@ -237,10 +256,11 @@
     }
    ],
    "source": [
-    "analyzer = DiffractionAnalysis(input_path=data_path,\n",
-    "                               pattern_indices=1,\n",
-    "                               poissonize=True\n",
-    "                              )\n",
+    "analyzer = DiffractionAnalysis(\n",
+    "    input_path=data_path,\n",
+    "    pattern_indices=1,\n",
+    "    poissonize=True,\n",
+    ")\n",
     "analyzer.plotPattern(logscale=True)"
    ]
   }
