--- a/src/controller/panoscDEMO/PaNOSC_DEMO-2_Monolithic-Noise.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-2_Monolithic-Noise.ipynb
@@ -125,10 +125,11 @@
     }
    ],
    "source": [
-    "analyzer = DiffractionAnalysis(input_path=data_path,\n",
-    "                               pattern_indices=1,\n",
-    "                               poissonize=True\n",
-    "                              )\n",
+    "analyzer = DiffractionAnalysis(\n",
+    "    input_path=data_path,\n",
+    "    pattern_indices=1,\n",
+    "    poissonize=True\n",
+    ")\n",
     "analyzer.plotPattern(logscale=True)"
    ]
   },
@@ -140,6 +141,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll pick a small number of random pixels in each frame and set them to a large positive value,\n",
+    "to see how a faulty detector could affect the results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -147,17 +156,24 @@
    "source": [
     "rand_size = 5\n",
     "\n",
-    "with h5py.File(data_path+'.h5','r') as f:\n",
-    "    with h5py.File('noise.h5','w') as of:\n",
-    "        f.copy('params',of)\n",
+    "with h5py.File(data_path+'.h5', 'r') as f:\n",
+    "    with h5py.File('noise.h5', 'w') as of:\n",
+    "        f.copy('params', of)\n",
     "        for i in f['data']:\n",
-    "            data = f['data'][i]['data'][...]\n",
-    "            ran_y = np.random.randint(data.shape[0],size=rand_size)\n",
-    "            ran_x = np.random.randint(data.shape[1],size=rand_size)\n",
-    "            for y,x in zip(ran_y,ran_x):\n",
-    "                data[y,x] = np.random.randint(low=-1,high=2)*1e12\n",
+    "            frame = f['data'][i]['data'][...]\n",
+    "\n",
+    "            # Choose pixels\n",
+    "            Ny, Nx = data.shape\n",
+    "            ran_y = np.random.randint(Nx, size=rand_size)\n",
+    "            ran_x = np.random.randint(Ny, size=rand_size)\n",
+    "\n",
+    "            # Set these to large values\n",
+    "            for y, x in zip(ran_y, ran_x):\n",
+    "                frame[y, x] = np.random.randint(low=-1, high=2) * 1e12\n",
+    "\n",
+    "            # Save the frame\n",
     "            grp = of.create_group(\"data/\"+i)\n",
-    "            grp.create_dataset(\"data\", data=data)"
+    "            grp.create_dataset(\"data\", data=frame)"
    ]
   },
   {
@@ -189,12 +205,11 @@
     }
    ],
    "source": [
-    "analyzer = DiffractionAnalysis(input_path=data_path,\n",
-    "                               pattern_indices=1,\n",
-    "                               poissonize=True\n",
-    "                              )\n",
-    "fig, ax= analyzer.plotPattern(logscale=True)\n",
-    "ax.plot(ran_x,ran_y,'ro',markersize=1.5)"
+    "analyzer = DiffractionAnalysis(\n",
+    "    input_path=data_path, pattern_indices=1, poissonize=True\n",
+    ")\n",
+    "fig, ax = analyzer.plotPattern(logscale=True)\n",
+    "ax.plot(ran_x, ran_y, 'ro', markersize=1.5)"
    ]
   }
  ],
