--- a/src/controller/panoscDEMO/PaNOSC_DEMO-3_Multiple_Panel.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-3_Multiple_Panel.ipynb
@@ -115,24 +115,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clean up previous diffraction run"
+    "Clean up any data from a previous run:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dirs_to_remove=['diffr']\n",
-    "files_to_remove=['diffr.h5']\n",
+    "if os.path.isdir(data_path):\n",
+    "    shutil.rmtree(d)\n",
     "\n",
-    "for d in dirs_to_remove:\n",
-    "    if os.path.isdir(d):\n",
-    "        shutil.rmtree(d)\n",
-    "for f in files_to_remove:\n",
-    "    if os.path.isfile(f):\n",
-    "        os.remove(f)"
+    "if os.path.isfile(data_path + '.h5'):\n",
+    "    os.remove(f)"
    ]
   },
   {
@@ -155,7 +151,7 @@
     "    photon_energy_relative_bandwidth=0.003, # relative bandwidth dE/E\n",
     "    divergence=0.0 * radian,                # Beam divergence in rad\n",
     "    photon_energy_spectrum_type='tophat',   # Spectrum type. Acceptable values are \"tophat\", \"SASE\", and \"twocolor\")\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -218,7 +214,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geom.write_crystfel_geom('agipd_simple_2d.geom', dims=('frame', 'ss', 'fs'),  adu_per_ev=1.0, clen=0.13, photon_energy=4972)"
+    "geom.write_crystfel_geom(\n",
+    "    'agipd_simple_2d.geom',\n",
+    "    dims=('frame', 'ss', 'fs'),\n",
+    "    adu_per_ev=1.0,\n",
+    "    clen=0.13,          # Sample - detector distance in m\n",
+    "    photon_energy=4972  # eV\n",
+    ")"
    ]
   },
   {
@@ -235,18 +237,18 @@
    "outputs": [],
    "source": [
     "diffParam = CrystFELPhotonDiffractorParameters(\n",
-    "        sample='3WUL.pdb',                    # Looks up pdb file in cwd, if not found, queries from RCSB pdb mirror.\n",
-    "        uniform_rotation=True,                # Apply random rotation\n",
-    "        number_of_diffraction_patterns=2,     #\n",
-    "        powder=False,                         # Set to True to create a virtual powder diffraction pattern (unested)\n",
-    "        intensities_file=None,                # File that contains reflection intensities. If set to none, use uniform intensity distribution\n",
-    "        crystal_size_range=[1e-7,1e-7],       # Range ([min,max]) in units of metres of crystal size.\n",
-    "        poissonize=False,                     # Set to True to add Poisson noise.\n",
-    "        number_of_background_photons=0,       # Change number to add uniformly distributed background photons.\n",
-    "        suppress_fringes=False,               # Set to True to suppress side maxima between reflection peaks.\n",
-    "        beam_parameters=beamParam,                 # Beam parameters object from above\n",
-    "        detector_geometry='agipd_simple_2d_edit.geom',      # External file that contains the detector geometry in CrystFEL notation.\n",
-    "        )"
+    "    sample='3WUL.pdb',                    # Looks up pdb file in cwd, if not found, queries from RCSB pdb mirror.\n",
+    "    uniform_rotation=True,                # Apply random rotation\n",
+    "    number_of_diffraction_patterns=2,     #\n",
+    "    powder=False,                         # Set to True to create a virtual powder diffraction pattern (unested)\n",
+    "    intensities_file=None,                # File that contains reflection intensities. If set to none, use uniform intensity distribution\n",
+    "    crystal_size_range=[1e-7,1e-7],       # Range ([min,max]) in units of metres of crystal size.\n",
+    "    poissonize=False,                     # Set to True to add Poisson noise.\n",
+    "    number_of_background_photons=0,       # Change number to add uniformly distributed background photons.\n",
+    "    suppress_fringes=False,               # Set to True to suppress side maxima between reflection peaks.\n",
+    "    beam_parameters=beamParam,                 # Beam parameters object from above\n",
+    "    detector_geometry='agipd_simple_2d_edit.geom',      # External file that contains the detector geometry in CrystFEL notation.\n",
+    ")"
    ]
   },
   {
@@ -255,8 +257,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diffractor = CrystFELPhotonDiffractor(parameters=diffParam,\n",
-    "                                     output_path=data_path)"
+    "diffractor = CrystFELPhotonDiffractor(\n",
+    "    parameters=diffParam, output_path=data_path\n",
+    ")"
    ]
   },
   {
