Bigger plots of diffraction patterns

--- a/src/controller/panoscDEMO/PaNOSC_DEMO-3_Multiple_Panel.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-3_Multiple_Panel.ipynb
@@ -125,10 +125,10 @@
    "outputs": [],
    "source": [
     "if os.path.isdir(data_path):\n",
-    "    shutil.rmtree(d)\n",
+    "    shutil.rmtree(data_path)\n",
     "\n",
     "if os.path.isfile(data_path + '.h5'):\n",
-    "    os.remove(f)"
+    "    os.remove(data_path + '.h5')"
    ]
   },
   {
