Demonstrate making virtual dataset for indexamajig

--- a/src/analysis/crystFEL_index/CrystFEL indexing.ipynb
+++ b/src/analysis/crystFEL_index/CrystFEL indexing.ipynb
@@ -995,13 +995,13 @@
       " Multi-lattice indexing (\"delete and retry\"): off\n",
       "                              Retry indexing: on\n",
       "Error: Data path ends with a / symbol\n",
-      "  69 indexable out of   69 processed (100.0%),   69 crystals so far.   69 images processed since the last message.\n",
+      "  54 indexable out of   54 processed (100.0%),   54 crystals so far.   54 images processed since the last message.\n",
       "Waiting for the last patterns to be processed...\n",
       "Final: 200 images processed, 200 had crystals (100.0%), 200 crystals overall.\n",
       "\n",
-      "real\t0m10.046s\n",
-      "user\t1m25.155s\n",
-      "sys\t0m2.322s\n"
+      "real\t0m9.394s\n",
+      "user\t1m40.758s\n",
+      "sys\t0m2.064s\n"
      ]
     }
    ],
@@ -1518,26 +1518,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_file = osp.join(data_dir, \"panoscDEMO/diffr200.h5\")\n",
-    "geom_file = \"../../controller/TestSimEx/agipd_simple_2d.geom\""
+    "geom_file = \"../../controller/panoscDEMO/agipd_simple_2d.geom\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make a virtual dataset to present data as a 3D array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_f = h5py.File(data_file, \"r\")"
+    "vlayout = h5py.VirtualLayout((200, 8192, 128), dtype='f4')\n",
+    "\n",
+    "frames_dir = \"../../../data/simulation/panoscDEMO/diffr200/\"\n",
+    "\n",
+    "for i, filename in enumerate(sorted(os.listdir(frames_dir))):\n",
+    "    with h5py.File(os.path.join(frames_dir, filename), 'r') as f:\n",
+    "        vsrc = h5py.VirtualSource(f['data/data'])\n",
+    "    \n",
+    "    vlayout[i] = vsrc\n",
+    "\n",
+    "\n",
+    "with h5py.File('vdata.h5', 'w') as f:\n",
+    "    f.create_virtual_dataset('data/data', vlayout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1670,7 @@
        ".h5glance-dataset-name {\n",
        "    font-weight: bold;\n",
        "}\n",
-       "</style><div id=\"h5glance-container-1\" class=\"h5glance-css-treeview\"><ul><li><input checked=\"checked\" id=\"h5glance-expand-switch-1\" type=\"checkbox\"/><label for=\"h5glance-expand-switch-1\">/data/0000001</label><ul><li class=\"h5glance-dataset\"><span class=\"h5glance-dataset-name\">data</span> <a data-hdf5-path=\"/data/data\" href=\"#\" class=\"h5glance-dataset-copylink\">[📋]</a>: 8192 × 128 entries, dtype: <abbr title=\"32-bit floating point\"><code>&lt;f4</code></abbr></li></ul></li></ul></div><script>// Based on code by Stackoverflow user Dean Taylor\n",
+       "</style><div id=\"h5glance-container-1\" class=\"h5glance-css-treeview\"><ul><li><input checked=\"checked\" id=\"h5glance-expand-switch-2\" type=\"checkbox\"/><label for=\"h5glance-expand-switch-2\">vdata.h5</label><ul><li><input id=\"h5glance-expand-switch-3\" type=\"checkbox\"/><label for=\"h5glance-expand-switch-3\">data</label><ul><li class=\"h5glance-dataset\"><span class=\"h5glance-dataset-name\">data</span> <a data-hdf5-path=\"/data/data\" href=\"#\" class=\"h5glance-dataset-copylink\">[📋]</a>: 200 × 8192 × 128 entries, dtype: <abbr title=\"32-bit floating point\"><code>&lt;f4</code></abbr></li></ul></li></ul></li></ul></div><script>// Based on code by Stackoverflow user Dean Taylor\n",
        "// https://stackoverflow.com/questions/400212/how-do-i-copy-to-the-clipboard-in-javascript/30810322\n",
        "// Used under Stackoverflow's CC-BY-SA 3.0 license\n",
        "\n",
@@ -1731,16 +1750,26 @@
        "</script></div>"
       ],
       "text/plain": [
-       "<h5glance.generate.H5Glance at 0x2adcde6230f0>"
+       "<h5glance.generate.H5Glance at 0x2b315c8dac88>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "H5Glance(data_f['data/0000001'])"
+    "H5Glance(\"vdata.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file = 'vdata.h5'\n",
+    "data_f = h5py.File(data_file, \"r\")"
    ]
   },
   {
@@ -1752,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1772,14 +1801,14 @@
     "from extra_geom import AGIPD_1MGeometry\n",
     "geom = AGIPD_1MGeometry.from_crystfel_geom(geom_file)\n",
     "\n",
-    "frame = data_f['data/0000001/data'][:].reshape(16, 512, 128)\n",
+    "frame = data_f['data/data'][0].reshape(16, 512, 128)\n",
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "geom.plot_data_fast(frame, axis_units='m', ax=ax, vmax=50);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1789,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -1818,145 +1847,16 @@
       "                   Refine indexing solutions: on\n",
       " Multi-lattice indexing (\"delete and retry\"): off\n",
       "                              Retry indexing: on\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "Error: Data path ends with a / symbol\n",
-      "   0 indexable out of    0 processed ( 0.0%),    0 crystals so far.    0 images processed since the last message.\n",
-      "  43 indexable out of   43 processed (100.0%),   43 crystals so far.   43 images processed since the last message.\n",
-      "  82 indexable out of   82 processed (100.0%),   82 crystals so far.   39 images processed since the last message.\n",
-      " 114 indexable out of  114 processed (100.0%),  114 crystals so far.   32 images processed since the last message.\n",
-      " 162 indexable out of  162 processed (100.0%),  162 crystals so far.   48 images processed since the last message.\n",
+      "  41 indexable out of   41 processed (100.0%),   41 crystals so far.   41 images processed since the last message.\n",
+      "  81 indexable out of   81 processed (100.0%),   81 crystals so far.   40 images processed since the last message.\n",
+      " 113 indexable out of  113 processed (100.0%),  113 crystals so far.   32 images processed since the last message.\n",
+      " 145 indexable out of  145 processed (100.0%),  145 crystals so far.   32 images processed since the last message.\n",
       "Waiting for the last patterns to be processed...\n",
       "Final: 200 images processed, 200 had crystals (100.0%), 200 crystals overall.\n",
       "\n",
-      "real\t0m59.617s\n",
-      "user\t10m30.721s\n",
-      "sys\t0m9.426s\n"
+      "real\t0m43.660s\n",
+      "user\t10m37.025s\n",
+      "sys\t0m3.448s\n"
      ]
     }
    ],
@@ -1965,13 +1865,13 @@
     "source /usr/share/Modules/init/bash\n",
     "module load exfel exfel_crystfel\n",
     "\n",
-    "time indexamajig -i multi-panel.lst -g ../../controller/TestSimEx/agipd_simple_2d.geom -o multi-panel.stream \\\n",
+    "time indexamajig -i multi-panel.lst -g ../../controller/panoscDEMO/agipd_simple_2d.geom -o multi-panel.stream \\\n",
     "    --peaks=peakfinder8 --threshold 20 -j20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2113,20 +2013,20 @@
        "[125 rows x 5 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "peaks_found = read_peak_lists('multi-panel.stream')\n",
-    "peak_tbl = peaks_found['0000001//']['peaks']\n",
+    "peak_tbl = peaks_found['//0']['peaks']\n",
     "peak_tbl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
