--- a/src/controller/panoscDEMO/PaNOSC_DEMO-3_Multiple_Panel.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-3_Multiple_Panel.ipynb
@@ -219,7 +219,8 @@
     "    dims=('frame', 'ss', 'fs'),\n",
     "    adu_per_ev=1.0,\n",
     "    clen=0.13,          # Sample - detector distance in m\n",
-    "    photon_energy=4972  # eV\n",
+    "    photon_energy=4972, # eV\n",
+    "    data_path='/data/data',\n",
     ")"
    ]
   },
