--- a/src/controller/panoscDEMO/PaNOSC_DEMO.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"SFX_intro.png\" width=\"700\" align=\"left\"/>"
+    "<img src=\"ijms-20-01094-g001.png\" width=\"700\" align=\"left\"/>  \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " \n",
+    "(c) Nam et al.  Int. J. Mol. Sci. 2019, 20(5), 1094; https://doi.org/10.3390/ijms20051094 "
    ]
   },
   {
