update SFX graph

--- a/src/controller/panoscDEMO/PaNOSC_DEMO-1_Monolithic.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-1_Monolithic.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"SFX_intro.png\" width=\"700\" align=\"left\"/>"
+    "<img src=\"ijms-20-01094-g001.png\" width=\"700\" align=\"left\"/>  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(c) Nam et al.  Int. J. Mol. Sci. 2019, 20(5), 1094; https://doi.org/10.3390/ijms20051094  "
    ]
   },
   {
@@ -280,9 +287,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Simex (module)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "simex-module"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
