--- a/src/controller/panoscDEMO/PaNOSC_DEMO-2_Monolithic-Noise.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-2_Monolithic-Noise.ipynb
@@ -207,9 +207,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Simex (module)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "simex-module"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
