Add EU funding notice

--- a/src/controller/panoscDEMO/CrystFEL indexing.ipynb
+++ b/src/controller/panoscDEMO/CrystFEL indexing.ipynb
@@ -2356,6 +2356,13 @@
     "\n",
     "fig.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No. 823852."
+   ]
   }
  ],
  "metadata": {
