--- a/src/controller/panoscDEMO/PaNOSC_DEMO-1_Monolithic.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-1_Monolithic.ipynb
@@ -256,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -279,6 +281,13 @@
     ")\n",
     "analyzer.plotPattern(logscale=True)\n",
     "plt.gcf().set_size_inches(12, 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No. 823852."
    ]
   }
  ],
