--- a/src/controller/panoscDEMO/PaNOSC_DEMO-2_Monolithic-Noise.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-2_Monolithic-Noise.ipynb
@@ -213,6 +213,13 @@
     "fig.set_size_inches(12, 10)\n",
     "fig.axes[0].plot(ran_x, ran_y, 'ro', markersize=5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No. 823852."
+   ]
   }
  ],
  "metadata": {
