--- a/src/controller/panoscDEMO/PaNOSC_DEMO-3_Multiple_Panel.ipynb
+++ b/src/controller/panoscDEMO/PaNOSC_DEMO-3_Multiple_Panel.ipynb
@@ -318,6 +318,13 @@
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
     "geom.plot_data_fast(frame, axis_units='m', ax=ax, vmax=1000);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This project has received funding from the European Union's Horizon 2020 research and innovation programme under grant agreement No. 823852."
+   ]
   }
  ],
  "metadata": {
